# TFM

./: README.md
Gazebo/gazebo_plugins_modified/: README.txt
Gazebo/jaguar_plugin/: CMakeLists.txt  jaguar.world  vel.cc  velodyne_plugin.cc  velodyne_reg.cc
Karim/drrobot_project/: README.md
Karim/drrobot_project/chapter6_tutorials/: CMakeLists.txt  pcl_stairs.cpp
Karim/drrobot_project/chapter6_tutorials/src/: pcl_filter.cpp  pcl_planar_segmentation.cpp  pcl_read.cpp  pcl_stairs.cpp  pcl_visualize.cpp  pcl_write.cpp
Karim/drrobot_project/crawler_robot_ros/: CMakeLists.txt  package.xml
Karim/drrobot_project/crawler_robot_ros/config/: logitech_extreme.yaml
Karim/drrobot_project/crawler_robot_ros/launch/: joy_and_teleop_crawler.launch  make_robot_description_and_call_state_publisher_crawler.launch  rviz_config.rviz  spawn_crawler_robot_ros.launch
Karim/drrobot_project/crawler_robot_ros/rviz/: rqtgui.rviz  urdf.rviz
Karim/drrobot_project/crawler_robot_ros/src/: crawler_flipper_ros.cc  teleop_crawler.cc
Karim/drrobot_project/drrobot_jaguar_v6/: CMakeLists.txt  package.xml  readme.txt
Karim/drrobot_project/drrobot_jaguar_v6/include/drrobot_jaguar_v6/: drrobotprotocol.hpp  main.h  mainwindow.hpp  qnode.hpp  ui_mainwindow.hpp
Karim/drrobot_project/drrobot_jaguar_v6/launch/: drrobot.launch
Karim/drrobot_project/drrobot_jaguar_v6/msg/: BaseMotorCmd.msg  FlipperInfo.msg  GPSInfo.msg  MotorBoardInfo.msg  MotorInfoArray.msg
Karim/drrobot_project/drrobot_jaguar_v6/resources/: images.qrc
Karim/drrobot_project/drrobot_jaguar_v6/src/: main.cpp  mainwindow.cpp  qnode.cpp
Karim/drrobot_project/drrobot_jaguar_v6/ui/: mainwindow.ui
Karim/drrobot_project/jaguar/: CMakeLists.txt  package.xml
Karim/drrobot_project/jaguar/include/drrobot_jaguar_v6/: main.h  mainwindow.hpp  qnode.hpp
Karim/drrobot_project/jaguar/launch/: jaguar.launch
Karim/drrobot_project/jaguar/msg/: FlipMotorCmd.msg
Karim/drrobot_project/jaguar/src/: main.cpp  mainwindow.cpp  qnode.cpp
ROS/jaguar_ros/: CMakeLists.txt  package.xml
ROS/jaguar_ros/config/: jaguar__left_front_track.yaml  jaguar__left_rear_track.yaml  jaguar__right_front_track.yaml  jaguar__right_rear_track.yaml
ROS/jaguar_ros/launch/: teleop_jaguar.launch
ROS/jaguar_ros/src/: jaguar.cpp  pointcloud.cpp  teleop_jaguar.cpp
ROS/jaguar_ros/urdf/: model.urdf
ROS/jaguar_ros/worlds/: stairs.world
gazebo/models/: CMakeLists.txt
gazebo/models/jaguar/: model.config  model.sdf
gazebo/plugins/: SimpleTrackedVehiclePlugin.cc  SimpleTrackedVehiclePlugin.hh  TrackedVehiclePlugin.cc  TrackedVehiclePlugin.hh
gazebo/worlds/: tracked_vehicle_simple.world
jaguar_description/: CMakeLists.txt  package.xml
jaguar_description/urdf/: model.urdf
jaguar_gazebo/: CMakeLists.txt  package.xml
jaguar_gazebo/config/: jaguar__left_front_track.yaml  jaguar__left_rear_track.yaml  jaguar__left_track.yaml  jaguar__right_front_track.yaml  jaguar__right_rear_track.yaml  jaguar__right_track.yaml
jaguar_gazebo/launch/: simple_world.launch
